packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/sch-002-stage-bare.ttrp
// expect: TTRP-SCH-002
container c target polars {
    s = load(stage.raw_2026)
}
